--- a/springcloud-learning-parent/springcloud-learning-api/pom.xml
+++ b/springcloud-learning-parent/springcloud-learning-api/pom.xml
@@ -13,11 +13,34 @@
     <artifactId>springcloud-learning-api</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
+
     <modules>
         <module>springcloud-learning-api-xlzx</module>
         <module>springcloud-learning-api-hpeis</module>
-        <module>springcloud-learning-api-hpeis-impl</module>
-        <module>springcloud-learning-api-xlzx-impl</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+    </dependencies>
 
 </project>
