--- a/springcloud-learning-getway/src/main/resources/application.yml
+++ b/springcloud-learning-getway/src/main/resources/application.yml
@@ -1,19 +1,19 @@
-####¶Ë¿ÚºÅ
+####ç«¯å£å·
 server:
   port: 80
-###·şÎñ×¢²áµ½eurekaµØÖ·
+###æœåŠ¡æ³¨å†Œåˆ°eurekaåœ°å€
 eureka:
   client:
     service-url:
            defaultZone: http://localhost:8100/eureka
 spring:
   application:
-    ####×¢²áÖĞĞÄÓ¦ÓÃÃû³Æ
+    ####æ³¨å†Œä¸­å¿ƒåº”ç”¨åç§°
     name: zuul-server
   cloud:
     config:
       profile: dev
       discovery:
-        service-id: config-service
+        service-id: config-server
         enable: true
 
