增加网关的全局异常处理

--- a/springcloud-learning-parent/springcloud-learning-api/pom.xml
+++ b/springcloud-learning-parent/springcloud-learning-api/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>springcloud-learning-api-xlzx</module>
         <module>springcloud-learning-api-hpeis</module>
+        <module>springcloud-learning-api-base</module>
     </modules>
 
     <dependencies>
