--- a/springcloud-learning-parent/springcloud-learning-api/springcloud-learning-api-hpeis/pom.xml
+++ b/springcloud-learning-parent/springcloud-learning-api/springcloud-learning-api-hpeis/pom.xml
@@ -11,4 +11,13 @@
 
     <artifactId>springcloud-learning-api-hpeis</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.wanwh</groupId>
+            <artifactId>springcloud-learning-api-base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 </project>
