增加网关swagger2功能

--- a/springcloud-learning-getway/pom.xml
+++ b/springcloud-learning-getway/pom.xml
@@ -46,6 +46,13 @@
                 <version>0.0.1-SNAPSHOT</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- swagger-spring-boot -->
+            <dependency>
+                <groupId>com.spring4all</groupId>
+                <artifactId>swagger-spring-boot-starter</artifactId>
+                <version>1.7.0.RELEASE</version>
+            </dependency>
     </dependencies>
 
     <dependencyManagement>
