--- a/springcloud-learning-eureka/src/main/resources/application.yml
+++ b/springcloud-learning-eureka/src/main/resources/application.yml
@@ -10,6 +10,7 @@ eureka:
   instance:
     ###注册到eurekaip地址
     hostname: 127.0.0.1
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:8100/eureka/
@@ -22,3 +23,11 @@ eureka:
     enable-self-preservation: true
     # 每隔10s扫描服务列表，移除失效服务
     eviction-interval-timer-in-ms: 10000
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
